--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <title>Admin Panel</title>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <nav>
+      <ul>
+        <li><a href="./pages/allProducts.html">Усі товари</a></li>
+        <li><a href="#">Букети</a></li>
+        <li><a href="#">Користувачі</a></li>
+        <li><a href="#">Замовлення</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
