--- a/src/pages/allProducts.html
+++ b/src/pages/allProducts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Product</title>
+    <title>All-Product</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;800;900&display=swap"
       rel="stylesheet"
@@ -37,7 +37,7 @@
         <p class="h4">Title</p>
         <p class="h5">В наявності</p>
         <p class="h3">100 UAH</p>
-        <button class="btn btn-primary">До кошика</button>
+        <button class="btn btn-primary js-save-img">Тест</button>
       </div>
     </section>
 
