--- a/src/pages/allProducts.html
+++ b/src/pages/allProducts.html
@@ -14,7 +14,7 @@
   <body>
     <section class="section sec-1">
       <form class="form-product box js-form">
-        <input type="text" placeholder="Назва" name="name" />
+        <input type="text" placeholder="Назва" name="name" value="Букет " />
         <input
           type="text"
           placeholder="Type"
